--- a/themes/footer.html
+++ b/themes/footer.html
@@ -1,73 +1,72 @@
 <footer id="footer">
-    <div class="footer-top">
+  <div class="footer-top">
       <div class="container">
-        <div class="row">
+          <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Baker</h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
+              <div class="col-lg-3 col-md-6 footer-contact">
+                  <h3>Baker</h3>
+                  <p>
+                      Calle A108<br>
+                      Ciudad de Buenos Aires, Argentina<br><br>
+                      <strong>Teléfono:</strong> +54 11 1234 5678<br>
+                      <strong>Email:</strong> info@ejemplo.com<br>
+                  </p>
+              </div>
+
+              <div class="col-lg-2 col-md-6 footer-links">
+                  <h4>Enlaces Útiles</h4>
+                  <ul>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Términos de Servicio</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
+                  </ul>
+              </div>
+
+              <div class="col-lg-3 col-md-6 footer-links">
+                  <h4>Nuestros Servicios</h4>
+                  <ul>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Diseño Web</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Desarrollo Web</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Gestión de Productos</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Diseño Gráfico</a></li>
+                  </ul>
+              </div>
+
+              <div class="col-lg-4 col-md-6 footer-newsletter">
+                  <h4>Suscríbete a Nuestro Boletín</h4>
+                  <p>Recibe noticias y actualizaciones</p>
+                  <form action="" method="post">
+                      <input type="email" name="email"><input type="submit" value="Suscribirse">
+                  </form>
+              </div>
+
           </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-
-        </div>
       </div>
-    </div>
+  </div>
 
-    <div class="container d-md-flex py-4">
+  <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Baker</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+          <div class="copyright">
+            &copy; Copyright <strong><span>PAEC</span></strong>. Todos los derechos reservados
+          </div>
+          <div class="credits">
+              <!-- Todos los enlaces en el pie de página deben mantenerse intactos. -->
+              <!-- Puedes eliminar los enlaces solo si compraste la versión pro. -->
+              <!-- Información de licencia: https://bootstrapmade.com/license/ -->
+              <!-- Compra la versión pro con formulario de contacto PHP/AJAX funcional: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
+              Diseñado por <a href="https://soft-cronos.com/">Soft-cRONOS</a>
+          </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-    </div>
-  </footer>
+  </div>
+</footer>
