--- a/themes/footer.html
+++ b/themes/footer.html
@@ -14,7 +14,7 @@
               </div>
 
               <div class="col-lg-2 col-md-6 footer-links">
-                  <h4>Enlaces Útiles</h4>
+                  <h4>Menú</h4>
                   <ul>
                       <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
                       <li><i class="bx bx-chevron-right"></i> <a href="#">Nosotros</a></li>
@@ -25,21 +25,21 @@
               </div>
 
               <div class="col-lg-3 col-md-6 footer-links">
-                  <h4>Nuestros Servicios</h4>
+                  <h4>Enlaces Útiles</h4>
                   <ul>
                       <li><i class="bx bx-chevron-right"></i> <a href="#">Diseño Web</a></li>
-                      <li><i class="bx bx-chevron-right"></i> <a href="#">Desarrollo Web</a></li>
-                      <li><i class="bx bx-chevron-right"></i> <a href="#">Gestión de Productos</a></li>
-                      <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                      <li><i class="bx bx-chevron-right"></i> <a href="#">Diseño Gráfico</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Ofimatica</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Software util</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Chat</a></li>
+                      <li><i class="bx bx-chevron-right"></i> <a href="#">Proyecto</a></li>
                   </ul>
               </div>
 
               <div class="col-lg-4 col-md-6 footer-newsletter">
-                  <h4>Suscríbete a Nuestro Boletín</h4>
-                  <p>Recibe noticias y actualizaciones</p>
+                  <h4>Buscar</h4>
+                  <p>Escribi palabras claves separadas por comas</p>
                   <form action="" method="post">
-                      <input type="email" name="email"><input type="submit" value="Suscribirse">
+                      <input type="email" name="email"><input type="submit" value="Buscar">
                   </form>
               </div>
 
@@ -51,14 +51,10 @@
 
       <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>PAEC</span></strong>. Todos los derechos reservados
+            &copy; Copyright <strong><span>PAEC by Soft-cRONOS</span></strong>. Todos los derechos reservados
           </div>
           <div class="credits">
-              <!-- Todos los enlaces en el pie de página deben mantenerse intactos. -->
-              <!-- Puedes eliminar los enlaces solo si compraste la versión pro. -->
-              <!-- Información de licencia: https://bootstrapmade.com/license/ -->
-              <!-- Compra la versión pro con formulario de contacto PHP/AJAX funcional: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
-              Diseñado por <a href="https://soft-cronos.com/">Soft-cRONOS</a>
+              Diseñado por <a href="https://grupofenix.ar/">GrupoFenix</a>
           </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
