--- a/themes/navbar.html
+++ b/themes/navbar.html
@@ -6,9 +6,11 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.php">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#servicios">Servicios</a></li>
           <li><a class="nav-link scrollto" href="#about">Nosotros</a></li>
-          <li><a class="nav-link scrollto" href="categorias.php">Categorias</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Post</a></li>
+          <li><a class="nav-link scrollto" href="categorias.php">Blog</a></li>
+          <li><a class="nav-link scrollto " href="index.php#portfolio">categorias</a></li>
+          <li><a class="nav-link btn scrollto " href="construccion">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
