--- a/themes/navbar.html
+++ b/themes/navbar.html
@@ -8,7 +8,7 @@
           <li><a class="nav-link scrollto " href="index.php">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#servicios">Servicios</a></li>
           <li><a class="nav-link scrollto" href="#about">Nosotros</a></li>
-          <li><a class="nav-link scrollto" href="categorias.php">Blog</a></li>
+          <li><a class="nav-link scrollto" href="bloglist.php">Blog</a></li>
           <li><a class="nav-link scrollto " href="index.php#portfolio">categorias</a></li>
           <li><a class="nav-link btn scrollto " href="construccion">Login</a></li>
         </ul>
